set street top container to be fixed so photos scroll into and behind it

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -677,6 +677,8 @@ html {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  position: fixed;
+  z-index: 9999;
 }
 
 
